Fix g_mime_message_get_date ownership txfr GI annotation

The message owns the date (it's effectively a property), so don't
transfer ownership.

Fixes a critical in vala when using this object.

See https://gitlab.gnome.org/GNOME/vala/-/issues/986